# rootftp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
demo_plugin/: Cargo.toml  README.md
demo_plugin/src/: lib.rs
plugin_library/: README.md
scripts/: install.sh
src/: auth.rs  cli.rs  config.rs  global_consts.rs  init.rs  lib.rs  main.rs
src/auth/: auth.rs
src/config/: mod.rs
src/constants/: mod.rs
src/helpers/: command_helper.rs  load_plugin.rs  mod.rs  plugin_library_handler.rs  server_handler.rs
src/listeners/: mod.rs  outbox_listener.rs
src/plugin_handler/: loader.rs  mod.rs  plugin_trait.rs  watcher.rs
src/system/: cli.rs  init.rs  mod.rs
systemd/: rootftp.service
